--- a/tutti.css
+++ b/tutti.css
@@ -1,3 +1,8 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 img {
     width: 1000px;
 }
@@ -6,12 +11,14 @@ body {
     text-align: center;
 }
 h1 {
+    margin: 25px;
     size: 3em;
 }
-p {
+p {margin: 20px;
     size: 1.5em;
 }
 li {
+    margin: 15px;
     size: 2em;
 }
 a {
@@ -20,5 +27,4 @@ a {
 }
 a:hover {
     text-decoration: underline;
-    color: cyan;
 }
