--- a/tutti.css
+++ b/tutti.css
@@ -4,10 +4,9 @@
     box-sizing: border-box;
 }
 img {
-    width: 1000px;
+    width: 100%;
 }
 body {
-    size: 20px;
     text-align: center;
 }
 h1 {
