--- a/css/Alpine.css
+++ b/css/Alpine.css
@@ -1,6 +1,12 @@
 body {
     background-color: rgb(33, 101, 226);
 }
-h1,p, a, li, a:hover, a:visited{
+
+h1,
+p,
+a,
+li,
+a:hover,
+a:visited {
     color: rgb(206, 97, 115);
 }
