--- a/css/Ferrari.css
+++ b/css/Ferrari.css
@@ -2,10 +2,12 @@ body {
     background-color: red;
 }
 h1,
-p,
+p {
+    color: white;
+}
 a,
 li,
 a:hover,
 a:visited {
-    color: rgb(206, 97, 115);
+    color: rgb(217, 255, 0);
 }
