--- a/css/Red Bull.css
+++ b/css/Red Bull.css
@@ -1,6 +1,9 @@
 body {
-    background-color: rgb(33, 101, 226);
+    background-color: rgb(0, 23, 66);
 }
-h1, a, li, a:hover, a:visited{
-    color: rgb(206, 97, 115);
+h1, p{
+    color: red;
+}
+a, li, a:hover, a:visited{
+    color: rgb(255, 230, 0);
 }
