--- a/css/Visa cash app RB.css
+++ b/css/Visa cash app RB.css
@@ -2,10 +2,12 @@ body {
     background-color: blue;
 }
 h1,
-p,
+p{
+    color: white;
+}
 a,
 li,
 a:hover,
 a:visited {
-    color: rgb(206, 97, 115);
+    color: rgb(255, 0, 0);
 }
