--- a/css/presentazioni.css
+++ b/css/presentazioni.css
@@ -1,8 +1,17 @@
 img {
-    width: 1000px;
+    width: 50%;
+    float: left;
 }
-body {
-    size: 20px;
+figcaption{
+    margin: 8% 0;
+    float: left;
+    width: 50%;
+}
+figure{
+    overflow: hidden;
+}
+li{
+    overflow: hidden;
 }
 a {
     text-decoration: double;
