--- a/css/presentazioni.css
+++ b/css/presentazioni.css
@@ -2,8 +2,18 @@ img {
     width: 50%;
     float: left;
 }
+p{
+    margin: 0;
+    text-align: center;
+    float: left;
+    width: 30%;
+}
+
+figcaption .destra, figcaption .sinistra {
+    width: 35%;
+}
 figcaption{
-    margin: 8% 0;
+    overflow: hidden;
     float: left;
     width: 50%;
 }
